[package]
name = "rumba"
version = "0.0.0"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
description = "[WIP] SMB protocol implementation in Rust"
keywords = ["smb", "samba", "fileserver"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://gitlab.com/imp/rumba-rs.git"
homepage = "https://gitlab.com/imp/rumba-rs"
documentation = "https://docs.rs/rumba-rs"
categories = []


[dependencies]
